--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,1405 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.SvgIcon_root {
+	fill: currentColor;
+	width: 1em;
+	height: 1em;
+	display: inline-block;
+	font-size: 1.5rem;
+	transition: fill .2s cubic-bezier(.4,0,.2,1) 0ms;
+	flex-shrink: 0;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	user-select: none
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.SvgIcon_color-inverse {
+	color: var(--text-inverse)
+}
+
+.SvgIcon_color-primary {
+	color: var(--primary)
+}
+
+.SvgIcon_color-secondary {
+	color: var(--secondary)
+}
+
+.SvgIcon_color-textSecondary {
+	color: var(--text-secondary)
+}
+
+.SvgIcon_color-warning {
+	color: var(--warning)
+}
+
+.SvgIcon_color-error {
+	color: var(--error)
+}
+
+.SvgIcon_color-disabled {
+	color: var(--disabled)
+}
+
+.SvgIcon_color-text {
+	color: var(--text-primary)
+}
+
+.SvgIcon_color-success {
+	color: var(--success)
+}
+
+.SvgIcon_fontSize-inherit {
+	font-size: inherit
+}
+
+.SvgIcon_fontSize-small {
+	font-size: 1rem
+}
+
+.SvgIcon_fontSize-medium {
+	font-size: 1.25rem
+}
+
+.SvgIcon_fontSize-large {
+	font-size: 2rem
+}
+
+@font-face {
+	font-family: __Exo_2_Fallback_dc213b;
+	src: local("Arial");
+	ascent-override:97.13%;descent-override:19.54%;line-gap-override:0.00%;size-adjust:102.85%}
+
+.__className_dc213b {
+	font-family: __Exo_2_dc213b,__Exo_2_Fallback_dc213b
+}
+
+body.loading * {
+	transition: none!important
+}
+
+html {
+	box-sizing: border-box;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale
+}
+
+body,html {
+	height: 100%;
+	color: var(--text-primary);
+	background: var(--bg-primary)
+}
+
+* {
+	font-family: Exo\ 2,Roboto,-apple-system,Nunito Sans,SF Pro Text,SF Pro Icons,Segoe UI,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol
+}
+
+body,dd,dl,fieldset,form,h1,h2,h3,h4,h5,h6,legend,ol,p,ul {
+	margin: 0;
+	padding: 0
+}
+
+body {
+	margin: 0;
+	font-size: .875rem;
+	font-weight: 400;
+	line-height: 1.43
+}
+
+#__next {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	max-width: 100vw
+}
+
+button,input,select,textarea {
+	box-sizing: border-box
+}
+
+button {
+	text-align: center
+}
+
+a {
+	color: inherit;
+	text-decoration: none
+}
+
+* {
+	box-sizing: border-box
+}
+
+:root {
+	--primary: #0070f3
+}
+
+#nprogress {
+	pointer-events: none
+}
+
+#nprogress .bar {
+	background: var(--primary);
+	position: fixed;
+	z-index: 2031;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 2px
+}
+
+@media (max-width: 599.5px) {
+	#nprogress .bar {
+		height:1px
+	}
+}
+
+.nprogress-custom-parent {
+	overflow: hidden;
+	position: relative
+}
+
+.nprogress-custom-parent #nprogress .bar {
+	position: absolute
+}
+
+*,:after,:before {
+	box-sizing: inherit
+}
+
+b,strong {
+	font-weight: bolder
+}
+
+@media (min-width: 720px) {
+	::-webkit-scrollbar {
+		width:10px;
+		height: 10px;
+		background: hsla(0,0%,55%,.2)
+	}
+
+	::-webkit-scrollbar-track {
+		border-radius: 10px
+	}
+
+	::-webkit-scrollbar-thumb {
+		background: hsla(0,0%,55%,.7);
+		border-radius: 10px
+	}
+}
+
+@media print {
+	body {
+		background-color: #fff
+	}
+}
+
+body::-webkit-backdrop {
+	background-color: #121212
+}
+
+body::backdrop {
+	background-color: #121212
+}
+
+textarea {
+	resize: vertical
+}
+
+hr {
+	border: 0;
+	height: 1px;
+	margin: 1em 0;
+	display: block;
+	padding: 0;
+	border-top: 1px solid hsla(0,0%,47%,.1)
+}
+
+input::-webkit-inner-spin-button,input::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	margin: 0
+}
+
+input[type=number] {
+	-moz-appearance: textfield
+}
+
+input:-webkit-autofill,input:-webkit-autofill:active,input:-webkit-autofill:focus,input:-webkit-autofill:hover {
+	-webkit-transition: background-color 5000s ease-in-out 0s,color 5000s ease-in-out 0s;
+	transition: background-color 5000s ease-in-out 0s,color 5000s ease-in-out 0s;
+	transition-delay: 5000s;
+	-webkit-transition-property: background-color,color;
+	transition-property: background-color,color;
+	-webkit-box-shadow: inset 0 0 0 30px hsla(0,0%,55%,0)!important
+}
+
+input::-webkit-input-placeholder {
+	color: currentColor;
+	opacity: .42;
+	-webkit-transition: opacity .2s cubic-bezier(.4,0,.2,1) 0ms;
+	transition: opacity .2s cubic-bezier(.4,0,.2,1) 0ms
+}
+
+input::-moz-placeholder {
+	color: currentColor;
+	opacity: .42;
+	-moz-transition: opacity .2s cubic-bezier(.4,0,.2,1) 0ms;
+	transition: opacity .2s cubic-bezier(.4,0,.2,1) 0ms
+}
+
+input:-ms-input-placeholder {
+	color: currentColor;
+	opacity: .42;
+	-ms-transition: opacity .2s cubic-bezier(.4,0,.2,1) 0ms;
+	transition: opacity .2s cubic-bezier(.4,0,.2,1) 0ms
+}
+
+input::-ms-input-placeholder {
+	color: currentColor;
+	opacity: .42;
+	-ms-transition: opacity .2s cubic-bezier(.4,0,.2,1) 0ms;
+	transition: opacity .2s cubic-bezier(.4,0,.2,1) 0ms
+}
+
+input,textarea {
+	font: inherit;
+	color: currentColor;
+	width: 100%;
+	border: 0;
+	line-height: normal;
+	margin: 0;
+	display: block;
+	padding: 6px 0 7px;
+	min-width: 0;
+	background: none;
+	box-sizing: initial;
+	-webkit-tap-highlight-color: transparent
+}
+
+input:focus,textarea:focus {
+	outline: 0
+}
+
+input:invalid,textarea:invalid {
+	box-shadow: none
+}
+
+input::-webkit-search-decoration,textarea::-webkit-search-decoration {
+	-webkit-appearance: none
+}
+
+@media print {
+	body {
+		display: none
+	}
+}
+
+audio,canvas,iframe,img,svg,video {
+	vertical-align: middle
+}
+
+p {
+	margin: 4px 0;
+	font-weight: 400;
+	line-height: 1.6
+}
+
+.grecaptcha-badge {
+	visibility: hidden
+}
+
+@media (min-width: 0px) and (max-width:599.95px) {
+	.hidden-xs {
+		display:none!important
+	}
+}
+
+@media (min-width: 0px) {
+	.hidden-xsUp {
+		display:none!important
+	}
+}
+
+@media (max-width: 599.95px) {
+	.hidden-xsDown {
+		display:none!important
+	}
+}
+
+@media (min-width: 600px) and (max-width:799.95px) {
+	.hidden-sm {
+		display:none!important
+	}
+}
+
+@media (min-width: 600px) {
+	.hidden-smUp {
+		display:none!important
+	}
+}
+
+@media (max-width: 799.95px) {
+	.hidden-smDown {
+		display:none!important
+	}
+}
+
+@media (min-width: 800px) and (max-width:1023.95px) {
+	.hidden-md {
+		display:none!important
+	}
+}
+
+@media (min-width: 800px) {
+	.hidden-mdUp {
+		display:none!important
+	}
+}
+
+@media (max-width: 799.95px) {
+	.hidden-mdDown {
+		display:none!important
+	}
+}
+
+@media (min-width: 1024px) and (max-width:1439.95px) {
+	.hidden-lg {
+		display:none!important
+	}
+}
+
+@media (min-width: 1024px) {
+	.hidden-lgUp {
+		display:none!important
+	}
+}
+
+@media (max-width: 1023.95px) {
+	.hidden-lgDown {
+		display:none!important
+	}
+}
+
+@media (min-width: 1440px) {
+	.hidden-xl,.hidden-xlUp {
+		display:none!important
+	}
+}
+
+@media (min-width: 0px) {
+	.hidden-xlDown {
+		display:none!important
+	}
+}
+
+.h200 {
+	height: 200px
+}
+
+.m16 {
+	margin: 16px
+}
+
+.mt0 {
+	margin-top: 0
+}
+
+.mt4 {
+	margin-top: 4px
+}
+
+.mt8 {
+	margin-top: 8px
+}
+
+.mt16 {
+	margin-top: 16px
+}
+
+.mb0 {
+	margin-bottom: 0
+}
+
+.mb4 {
+	margin-bottom: 4px
+}
+
+.mb8 {
+	margin-bottom: 8px
+}
+
+.mb16 {
+	margin-bottom: 16px
+}
+
+.ml4 {
+	margin-left: 4px
+}
+
+.ml8 {
+	margin-left: 8px
+}
+
+.ml16 {
+	margin-left: 16px
+}
+
+.mr4 {
+	margin-right: 4px
+}
+
+.mr8 {
+	margin-right: 8px
+}
+
+.mr16 {
+	margin-right: 16px
+}
+
+.hoverLink:hover {
+	color: var(--primary)
+}
+
+.blur {
+	filter: var(--blur)
+}
+
+.visible {
+	visibility: visible
+}
+
+.\!visible {
+	visibility: visible!important
+}
+
+.invisible {
+	visibility: hidden
+}
+
+.static {
+	position: static
+}
+
+.\!fixed {
+	position: fixed!important
+}
+
+.fixed {
+	position: fixed
+}
+
+.absolute {
+	position: absolute
+}
+
+.relative {
+	position: relative
+}
+
+.sticky {
+	position: -webkit-sticky;
+	position: sticky
+}
+
+.top-\[-15\%\] {
+	top: -15%
+}
+
+.right-0 {
+	right: 0
+}
+
+.bottom-0 {
+	bottom: 0
+}
+
+.top-\[-28px\] {
+	top: -28px
+}
+
+.left-\[75\%\] {
+	left: 75%
+}
+
+.top-0 {
+	top: 0
+}
+
+.left-0 {
+	left: 0
+}
+
+.z-10 {
+	z-index: 10
+}
+
+.row-auto {
+	grid-row: auto
+}
+
+.m-0 {
+	margin: 0
+}
+
+.m-8 {
+	margin: 2rem
+}
+
+.m-4 {
+	margin: 1rem
+}
+
+.m-auto {
+	margin: auto
+}
+
+.m-1 {
+	margin: .25rem
+}
+
+.m-0\.5 {
+	margin: .125rem
+}
+
+.m-2 {
+	margin: .5rem
+}
+
+.m-6 {
+	margin: 1.5rem
+}
+
+.my-2 {
+	margin-top: .5rem;
+	margin-bottom: .5rem
+}
+
+.mx-2 {
+	margin-left: .5rem;
+	margin-right: .5rem
+}
+
+.my-4 {
+	margin-top: 1rem;
+	margin-bottom: 1rem
+}
+
+.my-8 {
+	margin-top: 2rem;
+	margin-bottom: 2rem
+}
+
+.my-0 {
+	margin-top: 0;
+	margin-bottom: 0
+}
+
+.mx-6 {
+	margin-left: 1.5rem;
+	margin-right: 1.5rem
+}
+
+.mr-1 {
+	margin-right: .25rem
+}
+
+.mt-1 {
+	margin-top: .25rem
+}
+
+.mb-3 {
+	margin-bottom: .75rem
+}
+
+.mb-4 {
+	margin-bottom: 1rem
+}
+
+.mr-6 {
+	margin-right: 1.5rem
+}
+
+.mt-6 {
+	margin-top: 1.5rem
+}
+
+.mb-6 {
+	margin-bottom: 1.5rem
+}
+
+.mr-8 {
+	margin-right: 2rem
+}
+
+.mb-2 {
+	margin-bottom: .5rem
+}
+
+.mr-2 {
+	margin-right: .5rem
+}
+
+.mt-4 {
+	margin-top: 1rem
+}
+
+.mr-4 {
+	margin-right: 1rem
+}
+
+.mt-2 {
+	margin-top: .5rem
+}
+
+.ml-4 {
+	margin-left: 1rem
+}
+
+.mb-8 {
+	margin-bottom: 2rem
+}
+
+.mb-1 {
+	margin-bottom: .25rem
+}
+
+.mb-28 {
+	margin-bottom: 7rem
+}
+
+.mb-12 {
+	margin-bottom: 3rem
+}
+
+.mt-8 {
+	margin-top: 2rem
+}
+
+.mt-0\.5 {
+	margin-top: .125rem
+}
+
+.mt-0 {
+	margin-top: 0
+}
+
+.mb-10 {
+	margin-bottom: 2.5rem
+}
+
+.ml-8 {
+	margin-left: 2rem
+}
+
+.mb-5 {
+	margin-bottom: 1.25rem
+}
+
+.ml-auto {
+	margin-left: auto
+}
+
+.mt-7 {
+	margin-top: 1.75rem
+}
+
+.mt-5 {
+	margin-top: 1.25rem
+}
+
+.mt-24 {
+	margin-top: 6rem
+}
+
+.mt-3 {
+	margin-top: .75rem
+}
+
+.ml-1 {
+	margin-left: .25rem
+}
+
+.mr-3 {
+	margin-right: .75rem
+}
+
+.mr-1\.5 {
+	margin-right: .375rem
+}
+
+.mt-\[-4px\] {
+	margin-top: -4px
+}
+
+.mb-20 {
+	margin-bottom: 5rem
+}
+
+.block {
+	display: block
+}
+
+.inline-block {
+	display: inline-block
+}
+
+.inline {
+	display: inline
+}
+
+.flex {
+	display: flex
+}
+
+.inline-flex {
+	display: inline-flex
+}
+
+.table {
+	display: table
+}
+
+.grid {
+	display: grid
+}
+
+.contents {
+	display: contents
+}
+
+.list-item {
+	display: list-item
+}
+
+.hidden {
+	display: none
+}
+
+.\!hidden {
+	display: none!important
+}
+
+.h-8 {
+	height: 2rem
+}
+
+.h-full {
+	height: 100%
+}
+
+.h-12 {
+	height: 3rem
+}
+
+.h-\[30px\] {
+	height: 30px
+}
+
+.min-h-\[60vh\] {
+	min-height: 60vh
+}
+
+.min-h-\[40vh\] {
+	min-height: 40vh
+}
+
+.w-8 {
+	width: 2rem
+}
+
+.w-full {
+	width: 100%
+}
+
+.w-5 {
+	width: 1.25rem
+}
+
+.w-10 {
+	width: 2.5rem
+}
+
+.w-52 {
+	width: 13rem
+}
+
+.w-\[64px\] {
+	width: 64px
+}
+
+.w-12 {
+	width: 3rem
+}
+
+.w-\[30px\] {
+	width: 30px
+}
+
+.max-w-\[16rem\] {
+	max-width: 16rem
+}
+
+.max-w-\[8rem\] {
+	max-width: 8rem
+}
+
+.max-w-\[15\%\] {
+	max-width: 15%
+}
+
+.max-w-\[20\%\] {
+	max-width: 20%
+}
+
+.flex-1 {
+	flex: 1 1
+}
+
+.flex-shrink {
+	flex-shrink: 1
+}
+
+.flex-shrink-0 {
+	flex-shrink: 0
+}
+
+.flex-grow {
+	flex-grow: 1
+}
+
+.transform {
+	transform: var(--tw-transform)
+}
+
+.cursor-pointer {
+	cursor: pointer
+}
+
+.resize {
+	resize: both
+}
+
+.flex-row {
+	flex-direction: row
+}
+
+.flex-col {
+	flex-direction: column
+}
+
+.flex-wrap {
+	flex-wrap: wrap
+}
+
+.flex-nowrap {
+	flex-wrap: nowrap
+}
+
+.items-start {
+	align-items: flex-start
+}
+
+.items-end {
+	align-items: flex-end
+}
+
+.items-center {
+	align-items: center
+}
+
+.justify-start {
+	justify-content: flex-start
+}
+
+.justify-end {
+	justify-content: flex-end
+}
+
+.justify-center {
+	justify-content: center
+}
+
+.justify-between {
+	justify-content: space-between
+}
+
+.gap-2 {
+	gap: .5rem
+}
+
+.gap-8 {
+	gap: 2rem
+}
+
+.gap-1 {
+	gap: .25rem
+}
+
+.gap-7 {
+	gap: 1.75rem
+}
+
+.gap-4 {
+	gap: 1rem
+}
+
+.gap-3 {
+	gap: .75rem
+}
+
+.gap-6 {
+	gap: 1.5rem
+}
+
+.space-x-2>:not([hidden])~:not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(.5rem * calc(1 - var(--tw-space-x-reverse)))
+}
+
+.overflow-auto {
+	overflow: auto
+}
+
+.overflow-hidden {
+	overflow: hidden
+}
+
+.overflow-y-auto {
+	overflow-y: auto
+}
+
+.truncate {
+	overflow: hidden;
+	text-overflow: ellipsis
+}
+
+.truncate,.whitespace-nowrap {
+	white-space: nowrap
+}
+
+.rounded-full {
+	border-radius: 9999px
+}
+
+.rounded-sm {
+	border-radius: .125rem
+}
+
+.rounded {
+	border-radius: .25rem
+}
+
+.rounded-md {
+	border-radius: .375rem
+}
+
+.rounded-xl {
+	border-radius: .75rem
+}
+
+.rounded-\[32px\] {
+	border-radius: 32px
+}
+
+.rounded-\[16px\] {
+	border-radius: 16px
+}
+
+.rounded-\[12px\] {
+	border-radius: 12px
+}
+
+.border {
+	border-width: 1px
+}
+
+.border-0 {
+	border-width: 0
+}
+
+.bg-secondary {
+	background-color: var(--bg-secondary)
+}
+
+.bg-primary {
+	background-color: var(--bg-primary)
+}
+
+.bg-paper {
+	background-color: var(--bg-paper)
+}
+
+.bg-\[\#8c8c8c0d\] {
+	background-color: #8c8c8c0d
+}
+
+.bg-red-50 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(254,242,242,var(--tw-bg-opacity))
+}
+
+.bg-input {
+	background-color: var(--bg-input)
+}
+
+.p-6 {
+	padding: 1.5rem
+}
+
+.p-0 {
+	padding: 0
+}
+
+.p-4 {
+	padding: 1rem
+}
+
+.p-3 {
+	padding: .75rem
+}
+
+.p-8 {
+	padding: 2rem
+}
+
+.p-5 {
+	padding: 1.25rem
+}
+
+.p-2 {
+	padding: .5rem
+}
+
+.p-16 {
+	padding: 4rem
+}
+
+.p-1 {
+	padding: .25rem
+}
+
+.p-1\.5 {
+	padding: .375rem
+}
+
+.px-4 {
+	padding-left: 1rem;
+	padding-right: 1rem
+}
+
+.px-\[4px\] {
+	padding-left: 4px;
+	padding-right: 4px
+}
+
+.px-3 {
+	padding-left: .75rem;
+	padding-right: .75rem
+}
+
+.py-4 {
+	padding-top: 1rem;
+	padding-bottom: 1rem
+}
+
+.py-8 {
+	padding-top: 2rem;
+	padding-bottom: 2rem
+}
+
+.py-2 {
+	padding-top: .5rem;
+	padding-bottom: .5rem
+}
+
+.px-2 {
+	padding-left: .5rem;
+	padding-right: .5rem
+}
+
+.px-8 {
+	padding-left: 2rem;
+	padding-right: 2rem
+}
+
+.px-1 {
+	padding-left: .25rem;
+	padding-right: .25rem
+}
+
+.px-10 {
+	padding-left: 2.5rem;
+	padding-right: 2.5rem
+}
+
+.px-6 {
+	padding-left: 1.5rem;
+	padding-right: 1.5rem
+}
+
+.px-12 {
+	padding-left: 3rem;
+	padding-right: 3rem
+}
+
+.py-1 {
+	padding-top: .25rem;
+	padding-bottom: .25rem
+}
+
+.pr-2 {
+	padding-right: .5rem
+}
+
+.pt-5 {
+	padding-top: 1.25rem
+}
+
+.pb-5 {
+	padding-bottom: 1.25rem
+}
+
+.pr-40 {
+	padding-right: 10rem
+}
+
+.pr-52 {
+	padding-right: 13rem
+}
+
+.pl-1 {
+	padding-left: .25rem
+}
+
+.pt-4 {
+	padding-top: 1rem
+}
+
+.pb-4 {
+	padding-bottom: 1rem
+}
+
+.pb-2 {
+	padding-bottom: .5rem
+}
+
+.pb-12 {
+	padding-bottom: 3rem
+}
+
+.pl-0\.5 {
+	padding-left: .125rem
+}
+
+.pl-0 {
+	padding-left: 0
+}
+
+.pt-6 {
+	padding-top: 1.5rem
+}
+
+.pr-3 {
+	padding-right: .75rem
+}
+
+.pl-2 {
+	padding-left: .5rem
+}
+
+.pr-1 {
+	padding-right: .25rem
+}
+
+.text-center {
+	text-align: center
+}
+
+.text-\[14px\] {
+	font-size: 14px
+}
+
+.text-\[18px\] {
+	font-size: 18px
+}
+
+.font-bold {
+	font-weight: 700
+}
+
+.uppercase {
+	text-transform: uppercase
+}
+
+.italic {
+	font-style: italic
+}
+
+.text-green-500 {
+	--tw-text-opacity: 1;
+	color: rgba(16,185,129,var(--tw-text-opacity))
+}
+
+.text-red-600 {
+	--tw-text-opacity: 1;
+	color: rgba(220,38,38,var(--tw-text-opacity))
+}
+
+.underline {
+	text-decoration: underline
+}
+
+.opacity-0 {
+	opacity: 0
+}
+
+.opacity-80 {
+	opacity: .8
+}
+
+.shadow {
+	--tw-shadow: 0 1px 3px 0 rgba(0,0,0,.1),0 1px 2px 0 rgba(0,0,0,.06);
+	box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow)
+}
+
+.blur {
+	--tw-blur: blur(8px)
+}
+
+.blur,.invert {
+	filter: var(--tw-filter)
+}
+
+.invert {
+	--tw-invert: invert(100%)
+}
+
+.filter {
+	filter: var(--tw-filter)
+}
+
+.transition {
+	transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,-webkit-backdrop-filter;
+	transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
+	transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter,-webkit-backdrop-filter;
+	transition-timing-function: cubic-bezier(.4,0,.2,1);
+	transition-duration: .15s
+}
+
+.\!transition {
+	transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,-webkit-backdrop-filter!important;
+	transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter!important;
+	transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter,-webkit-backdrop-filter!important;
+	transition-timing-function: cubic-bezier(.4,0,.2,1)!important;
+	transition-duration: .15s!important
+}
+
+.ease-in-out {
+	transition-timing-function: cubic-bezier(.4,0,.2,1)
+}
+
+.hover\:opacity-100:hover {
+	opacity: 1
+}
+
+@media (min-width: 640px) {
+	.sm\:block {
+		display:block
+	}
+
+	.sm\:hidden {
+		display: none
+	}
+
+	.sm\:p-0 {
+		padding: 0
+	}
+
+	.sm\:py-1 {
+		padding-top: .25rem;
+		padding-bottom: .25rem
+	}
+
+	.sm\:text-left {
+		text-align: left
+	}
+}
+
+@media (min-width: 768px) {
+	.md\:gap-3 {
+		gap:.75rem
+	}
+
+	.md\:px-2 {
+		padding-left: .5rem;
+		padding-right: .5rem
+	}
+}
+
+@media (min-width: 1024px) {
+	.lg\:w-auto {
+		width:auto
+	}
+
+	.lg\:flex-nowrap {
+		flex-wrap: nowrap
+	}
+}
+
+:root {
+	--bg-primary: #f7f7f7;
+	--bg-secondary: #fff;
+	--bg-header: hsla(0,0%,100%,.8);
+	--bg-transparent: hsla(0,0%,100%,.5);
+	--bg-highlight: hsla(0,0%,100%,.2);
+	--bg-paper: #fff;
+	--bg-input: #fff;
+	--bg-inverse: #323232;
+	--primary: #1976d2;
+	--primary-light: #1976d2;
+	--secondary: red;
+	--secondary-light: #cf4138;
+	--text-primary: rgba(0,0,0,.87);
+	--text-secondary: rgba(0,0,0,.7);
+	--text-inverse: hsla(0,0%,100%,.87);
+	--text-on-primary: #fff;
+	--disabled: rgba(0,0,0,.38);
+	--shadow-elevation: rgba(0,0,0,.1) 0px 2px 35px 0px;
+	--text-margin: 2rem 0;
+	--poll-margin: 2.5rem 1rem;
+	--heading-margin-top: 4rem;
+	--heading-margin-bottom: 2.5rem;
+	--li-margin: 0 0 1rem 0;
+	--border: 1px solid hsla(0,0%,59%,.1);
+	--border-active: 1px solid hsla(0,0%,59%,.2);
+	--header-border-bottom: rgba(0,0,0,.1) 0px -1px 0px 0px inset;
+	--warning: #ff9800;
+	--error: red;
+	--success: #4caf50;
+	--blur: grayscale(1) blur(3px);
+	--bg-promo-primary: #f7f7f7;
+	--bg-promo-secondary: #332346;
+	--bg-promo-label: #1976d2
+}
+
+[data-theme=dark] {
+	--bg-primary: #121212;
+	--bg-secondary: #171717;
+	--bg-header: hsla(0,0%,9%,.8);
+	--bg-transparent: rgba(0,0,0,.5);
+	--bg-highlight: rgba(0,0,0,.1);
+	--bg-paper: #171717;
+	--bg-input: #222223;
+	--bg-inverse: #fff;
+	--primary: #1976d2;
+	--primary-light: #1a8dff;
+	--secondary: red;
+	--text-primary: #f5f5f5;
+	--text-secondary: hsla(0,0%,100%,.64);
+	--text-inverse: rgba(0,0,0,.87);
+	--text-on-primary: #fff;
+	--disabled: hsla(0,0%,100%,.38);
+	--shadow-elevation: rgba(0,0,0,.5) 0px 2px 35px 0px;
+	--bg-promo-primary: #121212;
+	--bg-promo-secondary: #00112b;
+	--bg-promo-label: #1976d2
 }
