--- a/src/App.css
+++ b/src/App.css
@@ -11,33 +11,11 @@
 }
 
 main.Main {
-  -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -moz-box-flex: 1;
-  -ms-flex: 1;
   flex: 1;
   height: 100%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -moz-box-orient: vertical;
-  -moz-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -moz-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -moz-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   padding-top: 56px;
 }
@@ -132,8 +110,31 @@ main.Main_jsx {
   will-change: box-shadow,transform;
 }
 
+.Button:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 0;
+  background: var(--bg-inverse);
+  opacity: 0;
+  border-radius: 4px;
+}
+
 .Button_text {
   padding: 8px;
+}
+
+.Button_endIcon {
+  display: inherit;
+  margin-left: 8px;
+  margin-right: -4px;
+}
+
+.Button_endIcon.Button_icon-size-small {
+  margin-right: -2px;
 }
 
 .Button_contained {
@@ -163,21 +164,21 @@ main.Main_jsx {
   border-radius: 0;
 }
 
-.Header_link::before {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background-color: var(--bg-promo-label);
-  transform: scaleY(0);
-  transform-origin: bottom;
-  transition: transform 0.2s ease;
+.Header_link:before {
+  height: 0;
+  top: unset;
+  background: var(--primary);
+  opacity: 1;
+  border-radius: 0;
 }
 
-.Header_link:hover::before {
-  transform: scaleY(4);
+.Button:hover:before {
+  opacity: .04;
+}
+
+.Header_link:hover:before {
+  height: 5px;
+  opacity: 1;
 }
 
 .Button_text-size-small {
@@ -287,17 +288,161 @@ main.Main_jsx {
 }
 
 .flexAuto {
-  -webkit-box-flex: 1;
-  -webkit-flex-grow: 1;
-  -moz-box-flex: 1;
-  -ms-flex-positive: 1;
   flex-grow: 1;
   max-width: 50%;
-  -webkit-flex-basis: 0;
-  -ms-flex-preferred-size: 0;
   flex-basis: 0;
 }
 
 .mwFull {
   max-width: 100%;
+}
+
+/*Typography*/
+.Typography_h1 {
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 1.167;
+}
+
+.Typography_h4 {
+  font-size: 1.2rem;
+  font-weight: 600;
+  line-height: 1.235;
+}
+
+.Typography_h5 {
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.334;
+}
+
+.Typography_h6 {
+  font-size: .85rem;
+  font-weight: 400;
+  line-height: 1.2;
+}
+
+.Typography_lineClamp {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  word-break: break-word;
+}
+
+.Typography_lineClamp-1 {
+  -webkit-line-clamp: 1;
+}
+
+.Typography_lineClamp-2 {
+  -webkit-line-clamp: 2;
+}
+
+@media (min-width: 600px) {
+  .Typography_h1 {
+    font-size: 2.2rem;
+  }
+  .Typography_h4 {
+    font-size: 1.275rem;
+  }
+  .Typography_h5 {
+    font-size: 1.1rem;
+  }
+  .Typography_body2, .Typography_h6 {
+    font-size: .875rem;
+  }
+}
+
+@media (min-width: 960px) {
+  .Typography_h1 {
+    font-size: 2.3rem;
+  }
+  .Typography_h4 {
+    font-size: 1.3rem;
+  }
+  .Typography_h5 {
+    font-size: 1.2rem;
+  }
+  .Typography_h6 {
+    font-size: .875rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .Typography_h1 {
+    font-size: 2.4rem;
+  }
+  .Typography_h4 {
+    font-size: 1.4rem;
+  }
+  .Typography_h5 {
+    font-size: 1.2rem;
+  }
+  .Typography_h6 {
+    font-size: .875rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  .Typography_h1 {
+    font-size: 2.5rem;
+  }
+  .Typography_h4 {
+    font-size: 1.5rem;
+  }
+  .Typography_h5 {
+    font-size: 1.1593rem;
+  }
+  .Typography_h6 {
+    font-size: .9rem;
+  }
+}
+
+.Typography_body1 {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+.Typography_body2 {
+  font-size: .825rem;
+  font-weight: 400;
+  line-height: 1.43;
+}
+
+.Typography_color-textSecondary {
+  color: var(--text-secondary);
+}
+
+
+.Typography_caption {
+  font-size: .75rem;
+  font-weight: 400;
+  line-height: 1.66;
+}
+
+.Typography_paragraph {
+  margin-bottom: 16px;
+}
+
+.Typography_color-textSecondary {
+  color: var(--text-secondary);
+}
+
+
+
+
+/* for test*/
+.MdView_root {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 24px 0;
+  height: 100%;
+  flex: 1 1;
+  width: 100%;
+}
+
+.MdView_container {
+  margin: 0 auto;
+  padding: 0 0 40px;
+  max-width: 980px;
 }
